Update Corne configuration for display and sleep settings

--- a/config/corne.conf
+++ b/config/corne.conf
@@ -4,6 +4,27 @@
 
 # Uncomment the following line to enable the Corne OLED Display
 CONFIG_ZMK_DISPLAY=y
+CONFIG_ZMK_DISPLAY_STATUS_SCREEN_CUSTOM=y
 CONFIG_ZMK_KEYBOARD_NAME="yisenCorneKB"
+
 CONFIG_ZMK_STUDIO=y
 CONFIG_ZMK_STUDIO_LOCKING=n
+CONFIG_ZMK_SLEEP=y
+
+
+# Enable pointing device support
+CONFIG_ZMK_POINTING=y
+
+# Comment out below to increase battery.  This is on due to some computers having bad bluetooth range.
+#CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
+
+CONFIG_NICE_OLED_SHOW_SLEEP_ART_ON_IDLE=y
+CONFIG_NICE_OLED_SHOW_SLEEP_ART_ON_SLEEP=y
+CONFIG_NICE_OLED_WIDGET_ANIMATION_PERIPHERAL_GEM=y
+CONFIG_NICE_OLED_WIDGET_ANIMATION_PERIPHERAL_CAT=n
+CONFIG_NICE_OLED_WIDGET_ANIMATION_PERIPHERAL_HEAD=n
+
+CONFIG_NICE_OLED_WIDGET_WPM_BONGO_CAT=n
+
+CONFIG_NICE_OLED_WIDGET_WPM_GRAPH=y
+CONFIG_NICE_OLED_WIDGET_WPM_LUNA=n
